# CMSRucio

./: build-rucio-images.sh
.github/workflows/: loadtest-docker-image.yml
UserDMTools/: pyproject.toml
UserDMTools/cms_rucio_import/: main.py
UserDMTools/cmsrucio_import/: .gitignore  pyproject.toml
docker/rucio-daemons/: Dockerfile
docker/rucio-server/: Dockerfile
helpers/: fetch_locality.py  mimic_rse_links.py  test_http_tape_rest_api.py
src/policy/CMSRucioPolicy/: __init__.py
src/policy/CMSRucioPolicy/algorithms/: auto_approve.py  lfn2pfn.py
