[tool.poetry]
name = "cms-rucio-import"
version = "0.1.0"
description = "Tools for rucio user data uploads"
authors = ["rchauhan <rahul.chauhan@cern.ch>"]
readme = "README.md"

[tool.poetry.scripts]
cms-rucio-import = "cms_rucio_import.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.6.1"}
strictyaml = "^1.6.1"
rucio-clients = "^1.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
